# 3DEngine-DX12BPR

./: .gitignore  CMakeLists.txt  Font.h  LICENSE  README.md  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  hud.h  main.cpp  renderer.h
PBRX12/: PBRX12.sln
PBRX12/Backend/: Backend.vcxitems  FileIntoString.h  Gateware.h  VertexShader.hlsl  d3dx12.h  pch.h  renderer.h
PBRX12/Demo/: Demo.vcxproj  main.cpp
PBRX12/Dependencies/Gateware/: version.txt
PBRX12/Game/: Game.vcxproj  main.cpp
libraries/gateware/: Gateware.h  README.md
